cabal-version:      3.0
name:               hexxagon
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Andrew Wright
maintainer:         aw@ovit.us
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hexxagon
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , ansi-terminal
                    , haskeline
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
