cabal-version:      3.0
name:               hexxagon
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Andrew Wright
maintainer:         aw@ovit.us
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hexxagon
    import:           warnings
    main-is:          hexxagon-main.hs
    other-modules:    DataTypes
                      IOFxs
                      Instances
                      MainFxs 
                      UtilityFxs
    build-depends:    base ^>=4.17.2.1
                    , ansi-terminal
                    , containers
                    , haskeline
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable hexxBoardConfig
    import:           warnings
    main-is:          hexxBoardConfig-main.hs
    other-modules:    DataTypes
                      IOFxs
                      Instances
                      MainFxs 
                      UtilityFxs
    build-depends:    base ^>=4.17.2.1
                    , ansi-terminal
                    , containers
                    , haskeline
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010



